# tanml

./: .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  Regression_Verification.docx  SECURITY.md  SUPPORT.md  clean_reports.py  cleanup_app.py  debug_meta_check.py  debug_output.docx  debug_template.py  dummy.csv  files_to_delete.txt  fix_reg_template_position_v2.py  generate_diagram.py  generate_diagram_v2.py  index.html  manual_report_gen.py  manual_report_output.docx  mkdocs.yml  objects.inv  paper.bib  paper.md  paper2.md  pyproject.toml  refactor_app_v2.py  run_demo.py  sample_regression.csv  sitemap.xml  tanml_report_1765896032.docx  test_real_template_output.docx  verify_cv_components.py  verify_excel.py  (+4 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  joss-paper.yml  paper.yml  release.yml
.streamlit/: config.toml
contributing/: index.html
datasets/: dummy_classification_train.csv  dummy_regression_test.csv  dummy_regression_train.csv
datasets/verification/: clf_test.csv  clf_train.csv  reg_test.csv  reg_train.csv
demo/: TanML_Colab_Demo.ipynb
demo_datasets/: test.csv  train.csv
docs/: README-Full.md  README-PyPI.md  contributing.md  index.md  installation.md  reference.md
docs/user-guide/: getting-started.md  tutorials.md
examples/: README.md
examples/logistic/scenario_a/: rules_logistic_scenario_a.yaml
examples/logistic/scenario_b/: rules_logistic_scenario_b.yaml
examples/logistic/scenario_c/: rules_logistic_scenario_c.yaml
installation/: index.html
reference/: index.html
rough/: Final_Regression_Report.docx  Manually_Generated_Report.docx  debug_real_template.py  generate_iris.py  plot_helper_reg.py  run_gen_report.py  test_cv_report.docx  test_table_replace.docx  verify_iris.py  verify_real_template_insertion.py
scripts/: generate_demo_data.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/contributing/: index.html
site/installation/: index.html
site/reference/: index.html
site/search/: search_index.json
site/user-guide/getting-started/: index.html
site/user-guide/tutorials/: index.html
tanml/: __init__.py  __main__.py  validate.py
tanml/analysis/: __init__.py  clustering.py  correlation.py  drift.py
tanml/check_runners/: __init__.py  base_runner.py  cleaning_repro_runner.py  correlation_runner.py  data_quality_runner.py  eda_runner.py  explainability_runner.py  input_cluster_runner.py  logistic_stats_runner.py  model_meta_runner.py  performance_runner.py  raw_data_runner.py  regression_metrics_runner.py  rule_engine_runner.py  stress_test_runner.py  vif_runner.py
tanml/checks/: base.py  cleaning_repro.py  correlation.py  data_quality.py  eda.py  input_cluster.py  logit_stats.py  model_contents.py  model_meta.py  performance.py  performance_classification.py  raw_data.py  regression_metrics.py  rule_engine.py  stress_test.py  vif.py
tanml/checks/explainability/: __init__.py  shap_check.py
tanml/cli/: arg_parser.py  init_cmd.py  main.py  validate_cmd.py
tanml/config/: __init__.py  settings.py
tanml/config_templates/: rules_multiple_models_datasets.yaml  rules_one_dataset_segment_column.yaml  rules_one_model_one_dataset.yaml
tanml/core/: __init__.py  context.py  exceptions.py  protocols.py
tanml/engine/: check_agent_registry.py  core_engine_agent.py  segmentation_agent.py  validation_agent.py
tanml/models/: __init__.py  registry.py
tanml/report/: report_builder.py
tanml/report/formatters/: __init__.py  lists.py  numeric.py
tanml/report/templates/: report_template.docx  report_template_cls.docx  report_template_reg.docx  report_template_reg_backup.docx
tanml/tmp_report_assets/: logit_summary.html
tanml/ui/: __init__.py  app.py  config.py  glossary.py  narratives.py  reports.py  reports_full.py
tanml/ui/_pages/: __init__.py  profiling.py  setup.py
tanml/ui/components/: __init__.py  forms.py  metrics.py  renderers.py
tanml/ui/helpers/: __init__.py  tvr.py
tanml/ui/pages/: evaluation.py  model_dev.py  preprocessing.py  profiling.py  ranking.py  setup.py
tanml/ui/pages/evaluation/: __init__.py  main.py
tanml/ui/pages/evaluation/tabs/: __init__.py  benchmark.py  cluster.py  drift.py  metrics.py  plots.py  shap.py  stress.py
tanml/ui/reports/: __init__.py  base.py  generators.py
tanml/ui/services/: __init__.py  cv.py  data.py  rule_config.py  session.py  tvr.py  validation.py
tanml/ui/views/: __init__.py  model_dev.py  preprocessing.py  profiling.py  ranking.py  setup.py
tanml/ui/views/evaluation/: __init__.py  main.py
tanml/ui/views/evaluation/tabs/: __init__.py  benchmark.py  cluster.py  drift.py  (+5 more)
tanml/utils/: data_loader.py  model_loader.py  r_loader.py  sas_loader.py  stats.py  yaml_generator.py  yaml_loader.py
tanml/utils/plotting/: __init__.py  save.py  themes.py
tanml_runs/013620f6/: dummy_classification_train.parquet
tanml_runs/1f11bb87/: train.csv
tanml_runs/1f11bb87/exported_data/: processed_data_20260309_112344.parquet  train_split_20260309_112344.parquet
tanml_runs/321a5dc6/: dummy_classification_test.parquet
tanml_runs/67d74710/: credit_risk_train.csv  credit_risk_train.parquet  housing_prices_train.csv  housing_prices_train.parquet
tanml_runs/68b28134/: eval_test.csv
tanml_runs/6f2fc101/exported_data/: processed_data_20260309_093038.csv  test_split_20260309_093038.csv  train_split_20260309_093038.csv
tanml_runs/7755be51/exported_data/: test_split_20260309_160116.parquet
tanml_runs/ace29c85/: cleaned_a.parquet
tanml_runs/b031ee75/: eval_test.parquet
tanml_runs/bb043e94/: eval_test.csv
tanml_runs/bd04f190/: sample_credit_data.csv
tanml_runs/e3c2a3dc/exported_data/: processed_data_20260307_210607.csv
testpypi_verification/: test_tanml_install.py
tests/: test_analysis_metrics.py  test_checks_base.py  test_final_verification.py  test_models_registry.py
user-guide/getting-started/: index.html
user-guide/tutorials/: index.html
