[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tanml"
version = "0.1.7"
description = "Automated validation toolkit for tabular ML models—MRM, credit risk, insurance, and other regulated use cases."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]


keywords = [
  "model validation",
  "model risk management",
  "model governance",
  "SR 11-7",
  "tabular ML",
  "credit risk",
  "insurance analytics",
  "explainability",
  "XAI",
  "SHAP",
  "stress testing",
  "reporting",
  "docx",
  "streamlit",
  "xgboost",
  "lightgbm",
  "catboost"
]



classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Financial and Insurance Industry",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Visualization"
]


authors = [
  { name = "Tanmay Sah" },
  { name = "Dolly Sah" }
]

maintainers = [
  { name = "Tanmay Sah" },
  { name = "Dolly Sah" }
]

dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "xgboost>=2.0",
  "lightgbm>=4.3",
  "catboost>=1.2",
  "shap>=0.44",
  "numba>=0.58",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "Pillow>=10.0",
  "python-docx>=1.1.2",
  "tzlocal>=5.0",
  "tqdm>=4.66",
  "pyarrow>=14.0",
  "openpyxl>=3.1",
  "pyreadstat>=1.2",
  "streamlit>=1.36"
]


[project.optional-dependencies]
dev = ["pytest", "black", "isort"]

[project.scripts]
tanml = "tanml.cli.main:main"

[project.urls]
Homepage = "https://github.com/tdlabs-ai/tanml"
Source = "https://github.com/tdlabs-ai/tanml"
Issues = "https://github.com/tdlabs-ai/tanml/issues"
Documentation = "https://github.com/tdlabs-ai/tanml#readme"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tanml*"]

[tool.setuptools.package-data]
"tanml.report.templates" = ["*.docx"] 
